tests/corpus/negative/N13-tuple-unpacking/source.py
def swap(left, right):
    left, right = right, left
    return left
